--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "lodash": "^4.6.1"
+    "lodash": "^4.6.1",
+    "oniyi-logger": "^0.4.2"
   }
 }
