--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
     "transform"
   ],
   "devDependencies": {
-    "eslint": "^2.4.0",
-    "eslint-config-oniyi": "^2.0.2",
+    "eslint": "^2.9.0",
+    "eslint-config-oniyi": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-coveralls": "^0.1.4",
     "gulp-eslint": "^2.0.0",
     "gulp-exclude-gitignore": "^1.0.0",
-    "gulp-istanbul": "^0.10.3",
+    "gulp-istanbul": "^0.10.4",
     "gulp-line-ending-corrector": "^1.0.1",
     "gulp-mocha": "^2.2.0",
-    "gulp-nsp": "^2.3.1",
+    "gulp-nsp": "^2.4.0",
     "gulp-plumber": "^1.1.0"
   },
   "repository": "benkroeger/oniyi-object-transform",
@@ -38,7 +38,10 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "lodash": "^4.6.1",
+    "lodash": "^4.11.2",
     "oniyi-logger": "^0.4.2"
+  },
+  "engines": {
+    "node": ">=4.0.0"
   }
 }
