--- a/package.json
+++ b/package.json
@@ -2,14 +2,10 @@
   "name": "oniyi-object-transform",
   "version": "2.0.0",
   "description": "offers simple transformations for object literals",
-  "homepage": "",
-  "author": {
-    "name": "Benjamin Kroeger",
-    "email": "benjamin.kroeger@gmail.com",
-    "url": ""
-  },
+  "homepage": "https://github.com/benkroeger/oniyi-object-transform#readme",
+  "author": "Benjamin Kroeger <benjamin.kroeger@gmail.com>",
   "files": [
-    "lib"
+    "lib/"
   ],
   "main": "lib/index.js",
   "keywords": [
@@ -27,18 +23,32 @@
     "nyc": "^11.2.1",
     "prettier-eslint-cli": "^4.4.0"
   },
-  "repository": "benkroeger/oniyi-object-transform",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/benkroeger/oniyi-object-transform.git"
+  },
   "scripts": {
     "docs": "jsdoc2md lib/index.js > API.md",
-    "prepublish": "gulp prepublish",
-    "test": "gulp"
+    "coverage": "nyc npm test && nyc report --reporter=html",
+    "format": "prettier-eslint --write \"lib/**/*.js\" \"test/**/*.js\"",
+    "prelint": "npm run format",
+    "lint": "eslint .",
+    "pretest": "npm run lint",
+    "test": "ava --verbose",
+    "test:watch": "npm test -- --watch"
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "lodash": "4.15.0",
-    "oniyi-logger": "1.0.0"
+    "debug": "^3.1.0",
+    "lodash": "^4.17.4"
   },
   "engines": {
     "node": ">=6.0.0"
+  },
+  "bugs": {
+    "url": "https://github.com/benkroeger/oniyi-object-transform/issues"
+  },
+  "directories": {
+    "test": "test"
   }
 }
